--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "sns",
   "private": true,
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "ember-cli-materialize": "^0.22.0-beta.0"
+  }
 }
